--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "sw-precache": "5.2.1",
     "ts-loader": "7.0.5",
     "ts-node": "8.10.2",
+    "tsconfig-plantain": "0.0.1",
     "type-coverage": "2.8.3",
     "typescript": "3.9.6",
     "uglify-js": "3",
