--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lodash.debounce": "4.0.8",
     "minimist": "1.2.5",
     "socket.io": "2.3.0",
-    "tslib": "2.0.1"
+    "tslib": "2.0.2"
   },
   "devDependencies": {
     "@types/clipboard": "2.0.1",
@@ -37,43 +37,43 @@
     "@types/minimist": "1.2.0",
     "@types/qrcode": "1.3.5",
     "@types/socket.io": "2.1.11",
-    "@types/socket.io-client": "1.4.33",
+    "@types/socket.io-client": "1.4.34",
     "@types/webpack": "4.41.22",
-    "@typescript-eslint/eslint-plugin": "4.0.1",
-    "@typescript-eslint/parser": "4.0.1",
-    "autoprefixer": "9.8.6",
+    "@typescript-eslint/eslint-plugin": "4.4.0",
+    "@typescript-eslint/parser": "4.4.0",
+    "autoprefixer": "10.0.1",
     "bootstrap": "4.5.2",
     "clean-css-cli": "4.3.0",
-    "clean-release": "2.14.0",
-    "clean-scripts": "1.17.1",
+    "clean-release": "2.15.2",
+    "clean-scripts": "1.18.7",
     "clipboard": "2.0.6",
     "cross-env": "7.0.2",
-    "eslint": "7.8.1",
-    "eslint-config-prettier": "6.11.0",
+    "eslint": "7.11.0",
+    "eslint-config-prettier": "6.12.0",
     "eslint-plugin-plantain": "1.1.0",
-    "file-uploader-vue-component": "7.6.1",
-    "file2variable-cli": "1.12.1",
+    "file-uploader-vue-component": "8.0.3",
+    "file2variable-cli": "1.13.3",
     "github-fork-ribbon-css": "0.2.3",
     "js-split-file": "2.2.1",
-    "markdownlint-cli": "0.23.2",
-    "no-unused-export": "1.12.2",
-    "postcss-cli": "7.1.2",
+    "markdownlint-cli": "0.24.0",
+    "no-unused-export": "1.13.0",
+    "postcss": "8.1.1",
+    "postcss-cli": "8.1.0",
     "qrcode": "1.4.4",
-    "relative-time-vue-component": "4.6.1",
+    "relative-time-vue-component": "5.0.1",
     "rev-static": "3.6.0",
     "rimraf": "3.0.2",
-    "socket.io-client": "2.3.0",
+    "socket.io-client": "2.3.1",
     "sw-precache": "5.2.1",
-    "ts-loader": "8.0.3",
+    "ts-loader": "8.0.4",
     "ts-node": "9.0.0",
     "tsconfig-plantain": "0.0.1",
-    "type-coverage": "2.10.0",
-    "typescript": "4.0.2",
+    "type-coverage": "2.13.3",
+    "typescript": "4.0.3",
     "uglify-js": "3",
-    "vue": "2.6.12",
-    "vue-class-component": "7.2.5",
+    "vue": "3.0.0",
     "watch-then-execute": "1.2.0",
-    "webpack": "4.44.1",
+    "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
     "webrtc-adapter": "7.7.0"
   }
