--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "express": "4.17.1",
     "lodash.debounce": "4.0.8",
     "minimist": "1.2.5",
-    "socket.io": "4.0.1",
+    "socket.io": "4.0.2",
     "tslib": "2.2.0"
   },
   "devDependencies": {
@@ -39,16 +39,16 @@
     "@types/socket.io": "2.1.13",
     "@types/socket.io-client": "1.4.36",
     "@types/webpack": "5.28.0",
-    "@typescript-eslint/eslint-plugin": "4.22.0",
-    "@typescript-eslint/parser": "4.22.0",
+    "@typescript-eslint/eslint-plugin": "4.22.1",
+    "@typescript-eslint/parser": "4.22.1",
     "autoprefixer": "10.2.5",
-    "bootstrap": "4.6.0",
+    "bootstrap": "5.0.0",
     "clean-css-cli": "5.3.0",
     "clean-release": "2.15.2",
     "clean-scripts": "1.20.1",
     "clipboard": "2.0.8",
     "cross-env": "7.0.3",
-    "eslint": "7.25.0",
+    "eslint": "7.26.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-plantain": "1.1.0",
     "file-uploader-vue-component": "8.1.0",
@@ -57,24 +57,24 @@
     "js-split-file": "2.2.1",
     "markdownlint-cli": "0.27.1",
     "no-unused-export": "1.14.1",
-    "postcss": "8.2.13",
+    "postcss": "8.2.14",
     "postcss-cli": "8.3.1",
     "qrcode": "1.4.4",
     "relative-time-vue-component": "5.0.2",
     "rev-static": "3.6.0",
     "rimraf": "3.0.2",
-    "socket.io-client": "4.0.1",
+    "socket.io-client": "4.0.2",
     "sw-precache": "5.2.1",
-    "ts-loader": "9.1.1",
+    "ts-loader": "9.1.2",
     "ts-node": "9.1.1",
     "tsconfig-plantain": "0.0.1",
     "type-coverage": "2.17.5",
     "typescript": "4.2.4",
     "uglify-js": "3",
-    "vue": "3.0.11",
+    "vue": "3.1.0-beta.2",
     "watch-then-execute": "1.2.0",
     "webpack": "5.36.2",
-    "webpack-cli": "4.6.0",
-    "webrtc-adapter": "7.7.1"
+    "webpack-cli": "4.7.0",
+    "webrtc-adapter": "8.0.0"
   }
 }
