--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lodash.debounce": "4.0.8",
     "minimist": "1.2.5",
     "socket.io": "4.1.2",
-    "tslib": "2.2.0"
+    "tslib": "2.3.0"
   },
   "devDependencies": {
     "@types/clipboard": "2.0.7",
@@ -39,8 +39,8 @@
     "@types/socket.io": "3.0.2",
     "@types/socket.io-client": "3.0.0",
     "@types/webpack": "5.28.0",
-    "@typescript-eslint/eslint-plugin": "4.26.0",
-    "@typescript-eslint/parser": "4.26.0",
+    "@typescript-eslint/eslint-plugin": "4.26.1",
+    "@typescript-eslint/parser": "4.26.1",
     "autoprefixer": "10.2.6",
     "bootstrap": "5.0.1",
     "clean-css-cli": "5.3.0",
@@ -57,7 +57,7 @@
     "js-split-file": "2.2.1",
     "markdownlint-cli": "0.27.1",
     "no-unused-export": "1.14.1",
-    "postcss": "8.3.0",
+    "postcss": "8.3.2",
     "postcss-cli": "8.3.1",
     "qrcode": "1.4.4",
     "relative-time-vue-component": "5.0.2",
@@ -65,16 +65,16 @@
     "rimraf": "3.0.2",
     "socket.io-client": "4.1.2",
     "sw-precache": "5.2.1",
-    "ts-loader": "9.2.2",
+    "ts-loader": "9.2.3",
     "ts-node": "10.0.0",
     "tsconfig-plantain": "0.0.1",
     "type-coverage": "2.17.5",
     "typescript": "4.3.2",
     "uglify-js": "3",
-    "vue": "3.1.0-beta.7",
+    "vue": "3.1.1",
     "watch-then-execute": "1.2.0",
     "webpack": "5.38.1",
-    "webpack-cli": "4.7.0",
+    "webpack-cli": "4.7.2",
     "webrtc-adapter": "8.0.0"
   }
 }
