--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lodash.debounce": "4.0.8",
     "minimist": "1.2.5",
     "socket.io": "4.1.3",
-    "tslib": "2.3.0"
+    "tslib": "2.3.1"
   },
   "devDependencies": {
     "@types/clipboard": "2.0.7",
@@ -39,8 +39,8 @@
     "@types/socket.io": "3.0.2",
     "@types/socket.io-client": "3.0.0",
     "@types/webpack": "5.28.0",
-    "@typescript-eslint/eslint-plugin": "4.29.0",
-    "@typescript-eslint/parser": "4.29.0",
+    "@typescript-eslint/eslint-plugin": "4.29.2",
+    "@typescript-eslint/parser": "4.29.2",
     "autoprefixer": "10.3.1",
     "bootstrap": "5.1.0",
     "clean-css-cli": "5.3.3",
@@ -66,15 +66,15 @@
     "socket.io-client": "4.1.3",
     "sw-precache": "5.2.1",
     "ts-loader": "9.2.5",
-    "ts-node": "10.1.0",
+    "ts-node": "10.2.1",
     "tsconfig-plantain": "0.0.1",
     "type-coverage": "2.18.0",
     "typescript": "4.3.5",
     "uglify-js": "3",
-    "vue": "3.2.0-beta.7",
+    "vue": "3.2.4",
     "watch-then-execute": "1.2.0",
-    "webpack": "5.49.0",
-    "webpack-cli": "4.7.2",
+    "webpack": "5.51.1",
+    "webpack-cli": "4.8.0",
     "webrtc-adapter": "8.1.0"
   }
 }
